--- a/Scss/_banner.scss
+++ b/Scss/_banner.scss
@@ -4,11 +4,14 @@
 #pointer{
     cursor:pointer;
 }
-.search-area{
+.search-area-container{
+  width: 80%;
+  margin: 0 auto;
   height: 100%;
   display: flex;
-  align-items: center;
+  gap: 30px;
   justify-content: center;
+  padding-top:80px;
 }
 .select-list {
     width: 25%;
@@ -22,9 +25,8 @@
 }
 .custom-select {
     position: relative;
-    width: 200px;
     z-index: 0;
-    width: 25%;
+    min-width: 13%;
     height: 36px;
     font-size: 16px;
     font-weight:100;
@@ -32,7 +34,6 @@
     color:#000;
     font-family: 'Noto Sans TC', sans-serif;
     background-color: #fff;
-    /* 添加其他必要的樣式 */
   }
   
   .selected-option {
@@ -43,7 +44,6 @@
     color: #333;
     padding: 8px;
     border: 1px solid #ccc;
-    /* 添加其他必要的樣式 */
   }
   .show{
     display:block;
@@ -70,3 +70,19 @@
   }
   
 
+.where-to-go {
+  position: relative;
+  label {
+    position: absolute;
+  }
+  input{
+    width: 100%;
+    height: 40px;
+  }
+  .where-to-go-input{
+    padding:10px ;
+    display: flex;
+    align-items: center;
+    gap:5px;
+  }
+}
