--- a/Scss/style.css
+++ b/Scss/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&family=Noto+Sans+TC&display=swap");
 html, body, div, span, applet, object, iframe,
@@ -140,11 +139,14 @@ Nav span {
   cursor: pointer;
 }
 
-.search-area {
+.search-area-container {
+  width: 80%;
+  margin: 0 auto;
   height: 100%;
   display: flex;
-  align-items: center;
+  gap: 30px;
   justify-content: center;
+  padding-top: 80px;
 }
 
 .select-list {
@@ -160,9 +162,8 @@ Nav span {
 
 .custom-select {
   position: relative;
-  width: 200px;
   z-index: 0;
-  width: 25%;
+  min-width: 13%;
   height: 36px;
   font-size: 16px;
   font-weight: 100;
@@ -170,7 +171,6 @@ Nav span {
   color: #000;
   font-family: "Noto Sans TC", sans-serif;
   background-color: #fff;
-  /* 添加其他必要的樣式 */
 }
 
 .selected-option {
@@ -181,7 +181,6 @@ Nav span {
   color: #333;
   padding: 8px;
   border: 1px solid #ccc;
-  /* 添加其他必要的樣式 */
 }
 
 .show {
@@ -207,4 +206,21 @@ Nav span {
 }
 .option-list li:hover {
   background-color: #747070;
+}
+
+.where-to-go {
+  position: relative;
+}
+.where-to-go label {
+  position: absolute;
+}
+.where-to-go input {
+  width: 100%;
+  height: 40px;
+}
+.where-to-go .where-to-go-input {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }/*# sourceMappingURL=style.css.map */
