--- a/Scss/_Nav.scss
+++ b/Scss/_Nav.scss
@@ -1,9 +1,23 @@
 .container-top{
     margin: 0 auto;
-    max-width: 1400px;
+    // max-width: 1440px;
+    max-height: 760px;
+}
+
+//調整背景亮度而不動到內容物
+.container-top::before{
+    content: "";
+    position: absolute;
+    max-height: 760px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('../web_pictures/banner-1.jpg');
     background-size:cover;
     background-repeat: no-repeat;
+    filter: brightness(0.7); /* 調整背景圖片的亮度 */
+    z-index: -1; /* 將偽元素放在背景 */
 }
 
 Nav {
@@ -32,6 +46,7 @@ Nav {
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
+
     }
     span{
         height: 100%;
@@ -51,6 +66,23 @@ Nav {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    // for hover 底線
+    .nav-option{
+        position: relative;
+        a{
+            &:hover{
+                &::before{
+                    content:'';
+                    position: absolute;
+                    top: 10px; /* 距離容器頂部的距離 */
+                    bottom: 30px; /* 距離容器底部的距離 */
+                    left: 5px; /* 距離容器左側的距離 */
+                    right: 5px; /* 距離容器右側的距離 */
+                    border-bottom: 2px solid #F6A21A;
+                }
+            }
+        }
+    }
 }
 .white-text{
     color:white;
@@ -59,3 +91,7 @@ Nav {
     color:black;
 }
 
+// .hover_line{
+//     border-bottom: 2px solid #F6A21A;
+//     padding:3px;
+// }
