--- a/Scss/_banner.scss
+++ b/Scss/_banner.scss
@@ -1,34 +1,39 @@
 .banner{
     height: 800px;
 }
+
+h1{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 52px;
+  letter-spacing: 0.05em;
+  margin-bottom: 10px;
+  color: #FFFFFF;
+  text-align: center;
+
+  //對齊下方搜尋欄位
+  margin-right: 135px;
+  cursor:default;
+}
+
 #pointer{
     cursor:pointer;
 }
 .search-area-container{
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   height: 100%;
   display: flex;
-  gap: 30px;
+  gap: 12px;
   justify-content: center;
-  padding-top:80px;
 }
-.select-list {
-    width: 25%;
-    height: 36px;
-    font-size: 16px;
-    font-weight:100;
-    letter-spacing: 5px;
-    color:#000;
-    font-family: 'Noto Sans TC', sans-serif;
-    background-color: #fff;
-}
+
 .custom-select {
     position: relative;
     z-index: 0;
-    min-width: 13%;
-    height: 36px;
-    font-size: 16px;
+    min-width: 140px;
+    height: 44px;
+    font-size: 12px;
     font-weight:100;
     letter-spacing: 5px;
     color:#000;
@@ -42,8 +47,13 @@
     align-items: center;
     background-color: #f2f2f2;
     color: #333;
-    padding: 8px;
+    padding: 12px;
     border: 1px solid #ccc;
+    p{
+      display: flex;
+      align-items: center;
+      gap:10px;
+    }
   }
   .show{
     display:block;
@@ -62,6 +72,9 @@
     border: 1px solid #ccc;
     li {
         padding: 8px;
+        display: flex;
+        align-items: center;
+        gap:10px;
         cursor: pointer;
         &:hover{
           background-color: #747070;
@@ -72,17 +85,58 @@
 
 .where-to-go {
   position: relative;
+  min-width: 246px;
   label {
     position: absolute;
+    font-size: 12px;
   }
   input{
     width: 100%;
-    height: 40px;
+    height: 100%;
+    height: 46px;
   }
   .where-to-go-input{
-    padding:10px ;
+    padding:13px ;
     display: flex;
     align-items: center;
     gap:5px;
+  }
+}
+.banner-content{
+  // display: flex;
+  max-width: 570px;
+  margin: 0 auto;
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  &:before{
+    content:'';
+    position:absolute;
+    top: 85px; /* 距離容器頂部的距離 */
+    bottom: -5px; /* 距離容器底部的距離 */
+    left: -5px; /* 距離容器左側的距離 */
+    border-left: 3px solid #F6A21A;
+  }
+}
+
+
+
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 16px;
+  gap: 10px;
+  color:#fff;
+  cursor:pointer;
+  width: 101px;
+  height: 48px;
+  border: 2px solid #fff;
+  &:hover{
+    background-color: #F6A21A;
+    border:transparent;
+    color:#000;
   }
 }
