--- a/Scss/_recomendation.scss
+++ b/Scss/_recomendation.scss
@@ -1,19 +1,45 @@
 .container-recommendation{
-    max-width: 1440px;
+    max-width: 100vw;
     margin: 0 auto;
     background-color: #F7F7F7;
+    cursor: default;
+}
+
+.recommendation-content{
+    padding-top: 80px;
+    padding-bottom: 88px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .align{
     display: flex;
     align-items: center;
 }
 .route-cards{
+    width: 1440px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    padding-top: 25px;
+    
     .route-card{
+        background-color: #fff;
+        min-width: 336px;
         height: 114px;
         display: flex;
+        cursor: pointer;
+        border:1px solid transparent;
+        &:hover{
+            border: 1px solid black;
+        }
         .card-pic{
             img{
-                max-width: 160px;
+                width: 160px;
+                height: 100%;
+                object-fit: cover;
             }
         }
         .card-content{
@@ -26,5 +52,17 @@
                 color:green;
             }
         }
+    }
+}
+
+.more-button{
+    margin-top: 32px;
+    border:1px solid black;
+    padding: 12px 48px;
+    font-size: 16px;
+    line-height: 23px;
+    cursor: pointer;
+    &:hover{
+        background-color: #F6A21A;
     }
 }
