--- a/Scss/style.css
+++ b/Scss/style.css
@@ -300,6 +300,7 @@ h1 {
 .container-intro {
   max-width: 1440px;
   margin: 0 auto;
+  cursor: default;
 }
 
 .intro-content {
@@ -417,9 +418,18 @@ h3 {
 }
 
 .container-recommendation {
-  max-width: 1440px;
+  max-width: 100vw;
   margin: 0 auto;
   background-color: #F7F7F7;
+  cursor: default;
+}
+
+.recommendation-content {
+  padding-top: 80px;
+  padding-bottom: 88px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .align {
@@ -427,12 +437,31 @@ h3 {
   align-items: center;
 }
 
+.route-cards {
+  width: 1440px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  padding-top: 25px;
+}
 .route-cards .route-card {
+  background-color: #fff;
+  min-width: 336px;
   height: 114px;
   display: flex;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+.route-cards .route-card:hover {
+  border: 1px solid black;
 }
 .route-cards .route-card .card-pic img {
-  max-width: 160px;
+  width: 160px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .route-cards .route-card .card-content {
   display: flex;
@@ -443,4 +472,48 @@ h3 {
 }
 .route-cards .route-card .card-content .material-symbols-outlined {
   color: green;
+}
+
+.more-button {
+  margin-top: 32px;
+  border: 1px solid black;
+  padding: 12px 48px;
+  font-size: 16px;
+  line-height: 23px;
+  cursor: pointer;
+}
+.more-button:hover {
+  background-color: #F6A21A;
+}
+
+.partner-container {
+  width: 1440px;
+  margin: 0 auto;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
 }/*# sourceMappingURL=style.css.map */
