--- a/Scss/_recomendation.scss
+++ b/Scss/_recomendation.scss
@@ -32,6 +32,14 @@
         display: flex;
         cursor: pointer;
         border:1px solid transparent;
+        position: relative;
+        a{
+            position: absolute;
+            top: 0;
+            left:0;
+            width: 100%;
+            height: 100%;
+        }
         &:hover{
             border: 1px solid black;
         }
