--- a/Scss/_swiper.scss
+++ b/Scss/_swiper.scss
@@ -1,32 +1,131 @@
 .partner-container{
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
+.more-activities{
+    text-align: center;
+    max-width: 15%;
+    margin: 0 auto;
+    margin-top: 32px;
+    border:1px solid black;
+    padding: 12px 48px;
+    font-size: 16px;
+    line-height: 23px;
+    cursor: pointer;
+    &:hover{
+        background-color: #F6A21A;
+    }
+}
 
 // swiper content
 .swiper {
     width: 100%;
-    height: 300px;
+    height: 400px;
 }
+
 
 .swiper-slide {
     text-align: center;
+    width: 250px;
+    height: 100%;
     font-size: 18px;
-    background: #fff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    a{
+        position: absolute;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 149px;
     object-fit: cover;
 }
 
 .swiper {
     margin-left: auto;
     margin-right: auto;
+}
+.slide-card{
+    width: 250px;
+    background: #F7F7F7;
+    box-shadow: 0px 1px 0px gainsboro;
+    border:1px solid transparent;
+    position: relative;
+    p{
+        font-size: 16px;
+        margin-top: 4px;
+    }
+    &:hover{
+        border:1px solid black;
+    }
+}
+.slide-content{
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    .slide-info{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 16px;
+        .material-symbols-outlined{
+            color:green;
+        }
+    }
+    .button-register{
+        align-self: end;
+        font-size: 14px;
+        margin-top: 11px;
+        color:green;
+    }
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    font-size: 20px;
+    transform: scale(1); /* 改變箭頭的尺寸 */
+    color:black;
+    padding:5px;
+}
+/* 自訂 swiper-button-next 和 swiper-button-prev 的樣式 */
+.swiper-button-next,
+.swiper-button-prev {
+    background-color: #fff; /* 設定箭頭的背景顏色 */
+    border:1px solid black;
+    width: 28px;
+}
+
+/* 自訂箭頭的形狀 */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    content: ""; /* 添加箭頭的內容 */
+    display: inline-block;
+    width: 10px; /* 設定箭頭的寬度 */
+    height: 10px; /* 設定箭頭的高度 */
+    border-top: 2px solid white; /* 設定箭頭的上邊框 */
+    border-right: 2px solid white; /* 設定箭頭的右邊框 */
+    transform: rotate(45deg); /* 旋轉箭頭45度 */
+}
+
+/* 設定箭頭的顏色 */
+.swiper-button-next::after {
+    border-color: black;
+}
+
+.swiper-button-prev::after {
+    border-color: black;
+    transform: rotate(225deg); /* 旋轉箭頭45度 */
 }
