--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -1,7 +1,14 @@
 .contact-container{
     max-width: 1440px;
     margin: 0 auto;
+    background: linear-gradient(white 36%, #1F1E1D 33.33%); /* 設定線性漸變背景 */
+
 }
+.contact-name-phone{
+    display: flex;
+    justify-content: space-between;
+}
+
 .contact-info{
     background-image: url('../web_pictures/free_use/free_use_2.jpg');
     background-repeat: no-repeat;
@@ -11,14 +18,81 @@
     margin: 0 auto;
     margin-top: 40px;
     .contact-card{
-        width: 45%;
+        width: 43%;
         height: 100%;
         padding:35px;
         background-color: rgba(255, 255, 255, 0.8);
         p{
+            font-weight: 300;
             font-size: 14px;
             line-height: 20px;
             letter-spacing: 0.1em;
+            color:#1F1E1D;
+        }
+    }
+    .phone {
+        position: relative;
+        &:before{
+            position: absolute;
+            content:'連絡電話';
+            color:black;
+            top: 35px;
+            left: 10px;
+            font-size: 11px;
+            color:#F6A21A;
+        }
+        #phone{
+            border: 1px solid transparent;
+            &:focus{
+                outline: none;
+            }
+        }
+    }
+
+    #name, #phone{
+        height: 44px;
+        margin-top: 40px;
+        border: 1px solid transparent;
+    }
+    #name{
+        margin-right: 8px;
+    }
+    #mail{
+        margin-top: 20px;
+        width: 100%;
+        height: 44px;
+        border: 1px solid transparent;
+    }
+    #comment{
+        margin-top: 20px;
+        width: 100%;
+        height: 236px;
+        border: 1px solid transparent;
+    }
+    input{
+        padding-left: 16px;
+        &::placeholder{
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 20px;
+        }
+    }
+    .contact-button{
+        margin-top: 20px;
+        width: 100%;
+        height: 35px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        border: 1px solid black;
+        cursor:pointer;
+        &:hover{
+            background: #1F1E1D;
+            color:#fff;
         }
     }
 }
