--- a/Scss/_Nav.scss
+++ b/Scss/_Nav.scss
@@ -46,11 +46,11 @@ Nav {
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
-
     }
-    span{
+    p{
         height: 100%;
         padding: 30px;
+        cursor:pointer;
     }
 }
 .material-symbols-outlined{
