--- a/Scss/style.css
+++ b/Scss/style.css
@@ -115,9 +115,10 @@ Nav a {
   padding-left: 10px;
   padding-right: 10px;
 }
-Nav span {
+Nav p {
   height: 100%;
   padding: 30px;
+  cursor: pointer;
 }
 
 .material-symbols-outlined {
@@ -153,6 +154,42 @@ Nav span {
 }
 
 .black-text {
+  color: black;
+}
+
+#menu-icon {
+  position: relative;
+}
+
+.nav-menu {
+  position: absolute;
+  top: 100px;
+  left: -200px;
+  width: 425px;
+  height: 246px;
+  background: #fff;
+  font-size: 16px;
+}
+.nav-menu li {
+  height: 82px;
+  display: flex;
+  justify-content: center;
+}
+.nav-menu li a {
+  width: 100%;
+  height: 100%;
+}
+
+.blur-background {
+  background-color: transparent;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.white-background {
+  background: #fff;
+}
+.white-background a {
   color: black;
 }
 
