--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -50,6 +50,7 @@
     }
 
     #name, #phone{
+        width:97%;
         height: 44px;
         margin-top: 40px;
         border: 1px solid transparent;
