--- a/Scss/_swiper.scss
+++ b/Scss/_swiper.scss
@@ -29,7 +29,7 @@
 
 .swiper-slide {
     text-align: center;
-    width: 250px;
+    max-width: 250px;
     height: 100%;
     font-size: 18px;
     display: flex;
@@ -48,7 +48,7 @@
 
 .swiper-slide img {
     display: block;
-    width: 250px;
+    width: 100%;
     height: 149px;
     object-fit: cover;
 }
@@ -58,7 +58,7 @@
     margin-right: auto;
 }
 .slide-card{
-    width: 250px;
+    width: 100%;
     background: #F7F7F7;
     box-shadow: 0px 1px 0px gainsboro;
     border:1px solid transparent;
@@ -128,4 +128,10 @@
 .swiper-button-prev::after {
     border-color: black;
     transform: rotate(225deg); /* 旋轉箭頭45度 */
+}
+
+// 
+
+.swiper-phone{
+    display: none;
 }
