--- a/Scss/style.css
+++ b/Scss/style.css
@@ -68,13 +68,14 @@ a {
 
 .container-top {
   margin: 0 auto;
+  margin-top: -100px;
   max-height: 760px;
+  position: relative;
 }
 
 .container-top::before {
   content: "";
   position: absolute;
-  max-height: 760px;
   top: 0;
   left: 0;
   width: 100%;
@@ -84,6 +85,11 @@ a {
   background-repeat: no-repeat;
   filter: brightness(0.7); /* 調整背景圖片的亮度 */
   z-index: -1; /* 將偽元素放在背景 */
+}
+
+.nav-placeholder {
+  height: 100px; /* nav 的高度 */
+  background-color: transparent; /* 或者與下方容器的背景顏色相同 */
 }
 
 Nav {
@@ -182,19 +188,38 @@ Nav p {
 
 .blur-background {
   background-color: transparent;
+  border: 1px solid white;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
 
 .white-background {
   background: #fff;
+  border: 1px solid gray;
 }
 .white-background a {
   color: black;
 }
 
+@media (max-width: 390px) {
+  .nav-menu {
+    width: 100px;
+    height: 150px;
+    left: -10px;
+  }
+  .nav-menu li {
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    font-size: 8px;
+  }
+  .nav-menu li a {
+    width: 100%;
+    height: 100%;
+  }
+}
 .banner {
-  height: 800px;
+  height: 760px;
 }
 
 h1 {
@@ -301,7 +326,7 @@ h1 {
 .banner-content {
   max-width: 570px;
   margin: 0 auto;
-  padding-top: 80px;
+  padding-top: 180px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -309,7 +334,7 @@ h1 {
 .banner-content:before {
   content: "";
   position: absolute;
-  top: 85px; /* 距離容器頂部的距離 */
+  top: 185px; /* 距離容器頂部的距離 */
   bottom: -5px; /* 距離容器底部的距離 */
   left: -5px; /* 距離容器左側的距離 */
   border-left: 3px solid #F6A21A;
@@ -560,7 +585,7 @@ h3 {
 
 .swiper-slide {
   text-align: center;
-  width: 250px;
+  max-width: 250px;
   height: 100%;
   font-size: 18px;
   display: flex;
@@ -579,7 +604,7 @@ h3 {
 
 .swiper-slide img {
   display: block;
-  width: 250px;
+  width: 100%;
   height: 149px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -591,7 +616,7 @@ h3 {
 }
 
 .slide-card {
-  width: 250px;
+  width: 100%;
   background: #F7F7F7;
   box-shadow: 0px 1px 0px gainsboro;
   border: 1px solid transparent;
@@ -665,6 +690,10 @@ h3 {
   transform: rotate(225deg); /* 旋轉箭頭45度 */
 }
 
+.swiper-phone {
+  display: none;
+}
+
 .contact-container {
   max-width: 1440px;
   margin: 0 auto;
@@ -717,6 +746,7 @@ h3 {
   outline: none;
 }
 .contact-info #name, .contact-info #phone {
+  width: 97%;
   height: 44px;
   margin-top: 40px;
   border: 1px solid transparent;
@@ -807,4 +837,121 @@ footer .social-info p {
   line-height: 20px;
   letter-spacing: 0.1em;
   color: #FFFFFF;
+}
+
+@media (max-width: 390px) {
+  .container-top::before {
+    min-height: 586px;
+  }
+  Nav {
+    max-width: 399px;
+    flex-direction: row-reverse;
+  }
+  Nav #menu-icon {
+    position: absolute;
+    right: 0px;
+  }
+  Nav .nav-select {
+    display: none;
+  }
+  Nav .logo img {
+    width: 235px;
+  }
+  .banner {
+    height: 586px;
+  }
+  .banner-content {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .banner-content h1 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 35px;
+    letter-spacing: 0.05em;
+    margin-right: 0;
+  }
+  .banner-content .custom-select, .banner-content .button {
+    display: none;
+  }
+  .banner-content:before {
+    content: "";
+    position: absolute;
+    top: 185px; /* 距離容器頂部的距離 */
+    bottom: 0px; /* 距離容器底部的距離 */
+    left: 40px; /* 距離容器左側的距離 */
+    border-left: 2px solid #F6A21A;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  .steps {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+  .steps .step-card {
+    margin-top: 30px;
+  }
+  .steps #arrow {
+    transform: rotate(90deg);
+    display: none;
+  }
+  .steps h4 {
+    font-size: 18px;
+    line-height: 26px;
+  }
+  .steps p {
+    font-size: 12px;
+    line-height: 17px;
+  }
+  .recommendation-content {
+    padding-left: 12px;
+    padding-right: 16px;
+  }
+  .route-cards {
+    max-width: 336px;
+    display: flex;
+    flex-direction: column;
+  }
+  .swiper {
+    display: none;
+  }
+  .swiper-phone {
+    padding-left: 12px;
+    padding-right: 12px;
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* 兩列，每列平均分配寬度 */
+    grid-template-rows: 1fr 1fr; /* 兩行，每行平均分配高度 */
+    gap: 10px; /* 元素之間的間距 */
+  }
+  .swiper-phone .swiper-slide {
+    min-width: 171px;
+  }
+  .slide-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 10px;
+  }
+  .slide-info .material-symbols-outlined {
+    font-size: 12px;
+    color: green;
+  }
+  .slide-info p {
+    font-size: 10px;
+  }
+  .more-activities {
+    max-width: 50%;
+  }
+  .contact-card {
+    width: 80% !important;
+  }
+  .footer-container {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
