--- a/Scss/_rwd-phone.scss
+++ b/Scss/_rwd-phone.scss
@@ -124,5 +124,14 @@
 //footer
     .footer-container{
         flex-direction: column;
+        .company-info{
+            p{
+                text-align: center;
+            }
+        }
+        .social-info{
+            margin-top: 30px;
+            align-items: center;
+        }
     }
 }
