--- a/Scss/style.css
+++ b/Scss/style.css
@@ -954,4 +954,11 @@ footer .social-info p {
   .footer-container {
     flex-direction: column;
   }
+  .footer-container .company-info p {
+    text-align: center;
+  }
+  .footer-container .social-info {
+    margin-top: 30px;
+    align-items: center;
+  }
 }/*# sourceMappingURL=style.css.map */
